--- a/login.html
+++ b/login.html
@@ -9,23 +9,24 @@
     <div class = " login-page">
         <div class = "form">
             <form class = "register-form">
-                <input type ="text"placeholder="user name"/>
-                <input type ="text"placeholder="password"/>
-                <input type ="text"placeholder="email id"/>
+                <input type ="text"  placeholder="user name"/>
+                <input type ="text" placeholder="password"/>
+                <input type ="text"  placeholder="email id"/>
                 <button>Create</button>
                 <p class = "message"> Already Registered? <a href = "#"> Login</a>
                 </p>
             </form>
             <form class = "login-form">
-                <input type ="text"placeholder="user name"/>
-                <input type ="password"placeholder="password"/>
-                <button>login</button>
+                <input type ="text" id="username" placeholder="user name"/>
+                <input type ="password" id="password" placeholder="password"/>
+                <button type="button" id="email" onclick="getInfo()">login</button>
                 <p class = "message"> Not Registered? <a href = "#"> Registered</a>
                 </p>
 
             </form>
         </div>
     </div>
+    <script src='login.js'></script>>
     <script src='https://code.jquery.com/jquery-3.4.0.min.js'></script>>
 
     <script>
