Add the front-end code for the main page, but still needs to connect to the back-end.

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dream Taste</title>
+    <title>Matrix</title>
+    <link rel = "stylesheet" href = "index.css">
 </head>
 <body>
-<h1>Home page for Matrix</h1>
+    <h1 class="Dream">Dream </h1>
+    <h3 class="taste">taste</h3>
 </body>
 </html>
