--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,17 @@
 <body>
     <h1 class="Dream">Dream </h1>
     <h3 class="taste">taste</h3>
+
+    <ul>
+        <li><a href="#softdrink">SoftDrink</a></li>
+        <li><a href="#milkproduct">MilkProduct</a></li>
+        <li><a href="#alcohol">Alcohol</a></li>
+        <li><a href="#tea">Tea</a></li>
+        <li><a href="#fruit">Fruit</a></li>
+    </ul>
+
+    <form>
+        <input type="text" placeholder="    search">
+    </form>
 </body>
 </html>
