--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,15 @@
 <body>
     <h1 class="Dream">Dream </h1>
     <h3 class="taste">taste</h3>
-
+    <a href="login.html"><button type="button" id="login1">login</button>
+        </a>
+    <button type="button" id="register1">register</button>
     <ul>
-        <li><a href="#softdrink">SoftDrink</a></li>
-        <li><a href="#milkproduct">MilkProduct</a></li>
-        <li><a href="#alcohol">Alcohol</a></li>
-        <li><a href="#tea">Tea</a></li>
-        <li><a href="#fruit">Fruit</a></li>
+        <li><a href="#Home">SoftDrink</a></li>
+        <li><a href="#Catalog">MilkProduct</a></li>
+        <li><a href="#Trending ">Alcohol</a></li>
+        <li><a href="#All Product">Tea</a></li>
+        <li><a href="#Contact Us">Fruit</a></li>
     </ul>
 
     <form>
