--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
         </a>
     <button type="button" id="register1">register</button>
     <ul>
-        <li><a href="#Home">SoftDrink</a></li>
-        <li><a href="#Catalog">MilkProduct</a></li>
-        <li><a href="#Trending ">Alcohol</a></li>
-        <li><a href="#All Product">Tea</a></li>
-        <li><a href="#Contact Us">Fruit</a></li>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#Catalog">Catalog</a></li>
+        <li><a href="#Trending ">Trending</a></li>
+        <li><a href="#All Product">All Product</a></li>
+        <li><a href="#Contact Us">Contact Us</a></li>
     </ul>
 
     <form>
