--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>User Login</title>
-        <link rel = "stylesheet" href = "login.css">
+    <link rel = "stylesheet" href = "stylesheets/login.css">
 </head>
 <body>
     <div class = " login-page">
