--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
             <div class="card">
                 <img src="./images/drink2.jpeg" alt ="alcohol" style = "width: 100%" >
                 <h3>jose Cuervo</h3>
+                <p>Some text</p>
                 <p><button>More Details</button>></p>
             </div>
         </div>
@@ -53,6 +54,7 @@
             <div class="card">
                 <img src="./images/drink3.jpg" alt ="alcohol" style = "width: 100%" >
                 <h3>Fernet Branca</h3>
+                <p>Some text</p>
                 <p><button>More Details</button>></p>
             </div>
         </div>
@@ -80,6 +82,7 @@
             <div class="card">
                 <img src="./images/drink2.jpeg" alt ="alcohol" style = "width: 100%" >
                 <h3>jose Cuervo</h3>
+                <p>Some text</p>
                 <p><button>More Details</button>></p>
             </div>
         </div>
@@ -88,6 +91,7 @@
             <div class="card">
                 <img src="./images/drink3.jpg" alt ="alcohol" style = "width: 100%" >
                 <h3>Fernet Branca</h3>
+                <p>Some text</p>
                 <p><button>More Details</button>></p>
             </div>
         </div>
@@ -101,5 +105,54 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <img src="./images/drink1.jpg" alt ="alcohol" style = "width: 100%" >
+                <h3>Captain Morgan</h3>
+                <p>Some text</p>
+                <p><button>More Details</button>></p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <img src="./images/drink2.jpeg" alt ="alcohol" style = "width: 100%" >
+                <h3>jose Cuervo</h3>
+                <p>Some text</p>
+                <p><button>More Details</button>></p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <img src="./images/drink3.jpg" alt ="alcohol" style = "width: 100%" >
+                <h3>Fernet Branca</h3>
+                <p>Some text</p>
+                <p><button>More Details</button>></p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <img src="./images/drink4.jpg" alt ="alcohol" style = "width: 100%" >
+                <h3>Crown Royal</h3>
+                <p>Some text</p>
+                <p><button>More Details</button>></p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="wrapper">
+            <nav>
+                <ul>
+                    <li><a herf = "Contact">Contact</a>></li>
+                    <li><a herf = "Contact">Contact</a>></li>
+                    <li><a herf = "Contact">Contact</a>></li>
+                    <li><a herf = "Contact">Contact</a>></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
